Bug fixed: Stretch issue on some pics

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -137,6 +137,8 @@ td, th {
 
 #summary-inner img {
   max-width: calc(100% - 40px);
+  height: auto;
+  object-fit: contain;
 }
 
 #summary-inner .img-wrapper img.state-1 {
